Revision history for Perl extension Module::Starter

1.77
        * Replace usage of ExtUtils::Command with File::Path
        * Clean up test file shebangs and remove pointless -T

1.76    Mon Mar 11 14:49:14 EDT 2019
        * GH#68: Default module templates will now use test_requires where appropriate (Dan Book)
        * GH#70: License metadata and blurbs are now handled by Software::License (Dan Book)
        * GH#70: Add --genlicense option to generate LICENSE file (Dan Book)

1.75    Thu Jun 14 12:53:47 EDT 2018
        * Update additional template URLs for consistency in tests

1.74    Tue Jun 12 18:15:20 EDT 2018
        * GH#66: Update default module template to link to metacpan (Dan Book)
        * GH#67: Update default module template to use HTTPS where appropriate (Chas. J. Owens IV)

1.73    Fri Aug 11 01:46:00 EDT 2017
        * Fix case where a distro name of '0' would be replaced by the first
          module name, confusing the tests (Dan Book)
        * Use Module::Runtime instead of string eval (Dan Book)

1.72    Sat Mar 25 21:20:41 EDT 2017
        * Stable release containing previous fixes

1.71_01 Thu Mar 23 23:04:11 EDT 2017
        * GH#51: drop use of Module::Build::Compat in Build.PL (Karen
          Etheridge)
        * GH#56: Fix generated syntax errors when using --fatalize (Dan Book)
        * GH#57: Fix strange scoping issue in test on 5.8 (Dan Book)
        * GH#58: Typo and doc fixes (Tordek)
        * GH#59: Quote versions in generated Makefile.PL/Build.PL (Dan Book)
        * GH#61: Fix version comparison in test (Dan Book)
        * GH#63: Remove unneeded dependency Module::Install::AuthorTests (Dan
          Book)
        * GH#64: Replace usage of Path::Class with File::Spec (Dan Book)

1.71    Fri Jan 30 13:28:31 2015
        * GH #47: create_t breaks plugins. (David Pottage)

1.70	Tue Jan 20 20:56:31 2015
        * Change the url for issues from rt.cpan.org to GitHub (David Pottage)